--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
 		<nav>
 			<a ui-sref-active="active" ui-sref="home">[Home]</a>
 			<a ui-sref-active="active" ui-sref="indexAll">[All Tasks]</a>
+			<!-- *** fro secon pass review ***
       <a ui-sref-active="active" ui-sref="indexTo">[My Pending Tasks]</a>
-      <a ui-sref-active="active" ui-sref="indexBy">[My Delegated Tasks]</a>
+      <a ui-sref-active="active" ui-sref="indexBy">[My Delegated Tasks]</a> -->
 		</nav>
 		<main ui-view></main>
 	</body>
