Clean up the code
Clean up the code, remove test console logs.

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
 		</header>
 		<nav class="card-panel purple lighten-2 valign-wrapper">
 			<a ui-sref-active="active" ui-sref="indexAll"><h5>Home</h5></a>
-			<!-- <a ui-sref-active="active" ui-sref="home">[Home]</a>
-			*** fro secon pass review ***
+			<!-- *** for secon pass review ***
       <a ui-sref-active="active" ui-sref="indexTo">[My Pending Tasks]</a>
       <a ui-sref-active="active" ui-sref="indexBy">[My Delegated Tasks]</a> -->
 		</nav>
